@@ -461,6 +461,11 @@ SKIP: {
   ok(SPVM::TestCase::Lib::Fn3->index_len);
 }
 
+# rindex_len
+{
+  ok(SPVM::TestCase::Lib::Fn3->rindex_len);
+}
+
 # All object is freed
 my $end_memory_blocks_count = SPVM::get_memory_blocks_count();
 is($end_memory_blocks_count, $start_memory_blocks_count);
