@@ -1379,6 +1379,15 @@ class TestCase::Lib::Fn3 {
     {
       my $target = "abcde";
       my $search = "bcd";
+      my $pos = Fn->index_len($target, $search, 0, length $target + 1);
+      unless ($pos == 1) {
+        return 0;
+      }
+    }
+
+    {
+      my $target = "abcde";
+      my $search = "bcd";
       my $pos = Fn->index_len($target, $search, 0, 4);
       unless ($pos == 1) {
         return 0;
@@ -1466,6 +1475,92 @@ class TestCase::Lib::Fn3 {
       my $target = "abab";
       my $search = "pq";
       my $pos = Fn->rindex($target, $search, 2);
+      unless ($pos == -1) {
+        return 0;
+      }
+    }
+
+    return 1;
+  }
+
+  static method rindex_len : int () {
+
+    {
+      my $target = "abab";
+      my $search = "ab";
+      my $pos = Fn->rindex_len($target, $search, 3, length $target);
+      unless ($pos == 2) {
+        return 0;
+      }
+    }
+
+    {
+      my $target = "abab";
+      my $search = "ab";
+      my $pos = Fn->rindex_len($target, $search, 3, length $target + 1);
+      unless ($pos == 2) {
+        return 0;
+      }
+    }
+
+    {
+      my $target = "abab";
+      my $search = "ab";
+      my $pos = Fn->rindex_len($target, $search, 2, length $target);
+      unless ($pos == 2) {
+        return 0;
+      }
+    }
+
+    {
+      my $target = "abab";
+      my $search = "ab";
+      my $pos = Fn->rindex_len($target, $search, 1, length $target);
+      unless ($pos == 0) {
+        return 0;
+      }
+    }
+
+    {
+      my $target = "abab";
+      my $search = "ab";
+      my $pos = Fn->rindex_len($target, $search, 0, length $target);
+      unless ($pos == 0) {
+        return 0;
+      }
+    }
+
+    {
+      my $target = "abab";
+      my $search = "pq";
+      my $pos = Fn->rindex_len($target, $search, 2, length $target);
+      unless ($pos == -1) {
+        return 0;
+      }
+    }
+
+    {
+      my $target = "abcab";
+      my $search = "bca";
+      my $pos = Fn->rindex_len($target, $search, length $target - 1, length $target);
+      unless ($pos == 1) {
+        return 0;
+      }
+    }
+
+    {
+      my $target = "abcab";
+      my $search = "bca";
+      my $pos = Fn->rindex_len($target, $search, 4 - 1, 4);
+      unless ($pos == 1) {
+        return 0;
+      }
+    }
+
+    {
+      my $target = "abcab";
+      my $search = "bca";
+      my $pos = Fn->rindex_len($target, $search, 3 - 1, 3);
       unless ($pos == -1) {
         return 0;
       }
