@@ -3,6 +3,7 @@ Revision history for SPVM
         [CHANGE]
         * SPVM don't support nmake. Already nmake test always fails until now.
         * Add "index_len" method to the "Fn" module.
+        * Add "rindex_len" method to the "Fn" module.
         
 0.9506  2021-02-22
         [CHANGE]
